--- a/filozofiank.html
+++ b/filozofiank.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister" rel="stylesheet">
   <script src="JavaScript/script.js"></script>
 
-  <!-- Navigation menu normal-->
+  <!-- Navigation menu mobile-->
   <nav class="navSmall">
       <label>MENÜ
         <input type="checkbox">
