--- a/szolgaltatas.html
+++ b/szolgaltatas.html
@@ -20,32 +20,50 @@
     }
   </style>
 
-  <!-- Navigation menu normal-->
- <nav class="navBig">
-   <div class="navDiv navLeft">
-       <div class="container">
-       <img id="main" class="navImage" src="images/handLightGreen.png">
-        <a class="navLink" id="mainPage" href="index.html">Főoldal</a>
-       <img class="navImage" src="images/handRed.png">
-       <a class="navLink" id="filozofiaLink" href="filozofiank.html">Filozófiánk</a>
-       <img id="blueUpTo" class="navImage"  src="images/handBlue.png">
-        <a class="navLink" id="magunkrolLink" href="magunkrol.html">Magunkról</a>
-       <img class="navImage bottom first" src="images/handYellow.png">
-         <a class="navLink" id="tanyaLink" href="tanya.html">Tanya</a>
-       <img class="navImage bottom" src="images/handPurple.png">
-         <a class="navLink" id="programLink" href="programok.html">Programok</a>
-       <img class="navImage bottom" src="images/handOrange.png">
-         <a class="navLink" id="szolgLink" href="szolgaltatas.html">Szolgáltatások</a>
-       <div class="navDiv navRight">
-          <div class="container">
-            <img id="main" class="navImage navImgLeft" src="images/handLightGreen.png">
-               <a class="navLink" id="szakLink" href="szak.html">Szakirodalom</a>
-            <img id="blueUpTo" class="navImage navImgLeft" src="images/handBlue.png">
-               <a class="navLink" id="kapcsLink" href="kapcsolat.html">Kapcsolat</a>
-          </div>
-       </div>
-   </div>
- </nav>
+  <!-- Navigation menu mobile-->
+  <nav class="navSmall">
+      <label>MENÜ
+        <input type="checkbox">
+        <div>
+          <a class="navLink" href="index.html">Főoldal</a>
+          <a class="navLink" href="filozofiank.html">Filozófiánk</a>
+          <a class="navLink" href="magunkrol.html">Magunkról</a>
+          <a href="tanya.html">Tanya</a>
+          <a href="programok.html">Programok</a>
+          <a href="szolgaltatas.html">Szolgáltatások</a>
+          <a href="szak.html">Szakirodalom</a>
+          <a href="kapcsolat.html">Kapcsolat</a>
+        </div>
+      </label>
+    </nav>
+
+    <!-- Navigation menu normal-->
+   <nav class="navBig">
+     <div class="navDiv navLeft">
+         <div class="container">
+         <img id="main" class="navImage" src="images/handLightGreen.png">
+          <a class="navLink" id="mainPage" href="index.html">Főoldal</a>
+         <img class="navImage" src="images/handRed.png">
+         <a class="navLink" id="filozofiaLink" href="filozofiank.html">Filozófiánk</a>
+         <img id="blueUpTo" class="navImage"  src="images/handBlue.png">
+          <a class="navLink" id="magunkrolLink" href="magunkrol.html">Magunkról</a>
+         <img class="navImage bottom first" src="images/handYellow.png">
+           <a class="navLink" id="tanyaLink" href="tanya.html">Tanya</a>
+         <img class="navImage bottom" src="images/handPurple.png">
+           <a class="navLink" id="programLink" href="programok.html">Programok</a>
+         <img class="navImage bottom" src="images/handOrange.png">
+           <a class="navLink" id="szolgLink" href="szolgaltatas.html">Szolgáltatások</a>
+         <div class="navDiv navRight">
+            <div class="container">
+              <img id="main" class="navImage navImgLeft" src="images/handLightGreen.png">
+                 <a class="navLink" id="szakLink" href="szak.html">Szakirodalom</a>
+              <img id="blueUpTo" class="navImage navImgLeft" src="images/handBlue.png">
+                 <a class="navLink" id="kapcsLink" href="kapcsolat.html">Kapcsolat</a>
+            </div>
+         </div>
+     </div>
+   </nav>
+
 </head>
 <body>
 <div class="wrapper">
