--- a/esely.html
+++ b/esely.html
@@ -6,7 +6,7 @@
 
   <title>Élménypedagógia.com || Esélyegyenlőség</title>
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister" rel="stylesheet">
@@ -33,26 +33,35 @@
    <nav class="navBig">
      <div class="navDiv navLeft">
          <div class="container">
-         <img id="main" class="navImage" src="images/handLightGreen.png">
-          <a class="navLink" id="mainPage" href="index.html">Főoldal</a>
-         <img class="navImage" src="images/handRed.png">
-         <a class="navLink" id="filozofiaLink" href="filozofiank.html">Filozófiánk</a>
-         <img id="blueUpTo" class="navImage"  src="images/handBlue.png">
-          <a class="navLink" id="magunkrolLink" href="magunkrol.html">Magunkról</a>
-         <img class="navImage bottom first" src="images/handYellow.png">
-           <a class="navLink" id="tanyaLink" href="tanya.html">Tanya</a>
-         <img class="navImage bottom" src="images/handPurple.png">
-           <a class="navLink" id="programLink" href="programok.html">Programok</a>
-         <img class="navImage bottom" src="images/handOrange.png">
-           <a class="navLink" id="szolgLink" href="szolgaltatas.html">Szolgáltatások</a>
-         <div class="navDiv navRight">
-            <div class="container">
-              <img id="main" class="navImage navImgLeft" src="images/handLightGreen.png">
-                 <a class="navLink" id="szakLink" href="szak.html">Szakirodalom</a>
-              <img id="blueUpTo" class="navImage navImgLeft" src="images/handBlue.png">
-                 <a class="navLink" id="kapcsLink" href="kapcsolat.html">Kapcsolat</a>
-            </div>
-         </div>
+           <div id="main" class="navImage">
+             <a class="navLink" href="index.html">Főoldal</a>
+           </div>
+           <div id="filozofiaLink" class="navImage">
+            <a class="navLink" href="filozofiank.html">Filozófiánk</a>
+           </div>
+           <div id="magunkrolLink" class="navImage">
+             <a class="navLink" href="magunkrol.html">Magunkról</a>
+           </div>
+           <div id="tanyaLink" class="navImage bottom first">
+            <a class="navLink" href="tanya.html">Tanya</a>
+           </div>
+           <div id="programLink" class="navImage bottom">
+             <a class="navLink" href="programok.html">Programok</a>
+           </div>
+           <div id="szolgLink" class="navImage bottom">
+            <a class="navLink" href="szolgaltatas.html">Szolgáltatások</a>
+          </div>
+          <div class="navDiv navRight">
+              <div class="container">
+                <div id="szakLink" class="navImage navImgLeft">
+                  <a class="navLink" href="programok.html">Kapcsolat</a>
+                </div>
+                <div id="kapcsLink" class="navImage navImgLeft">
+                 <a class="navLink" href="szolgaltatas.html">Szakirodalom</a>
+               </div>
+              </div>
+          </div>
+      </div>
      </div>
    </nav>
 
@@ -107,7 +116,7 @@
   A mai magyar oktatási rendszer egyik fő funkciója a szelekció: egyik balra, másik jobbra… Vagyis már az iskolakezdés sikere attól függ, hogy a gyerek a saját egyénisége, intelligenciája és családi, szociális háttere alapján milyen „kasztba” tartozik, többség vagy kisebbség, nyertes vagy vesztes. Sajnos Magyarországon már a legtöbb esetben az első osztályban eldől, hogy igazgató, vagy portás lesz a gyerekből. Számos nemzetközi és magyar kutatás is bizonyítja, hogy Magyarországon a származás és az iskolai sikerek/későbbi pályaválasztás között rendkívül magas a korreláció, a felemelkedés lehetősége igen alacsony. Vagyis a takarító lánya is takarító lesz, az ügyvéd fia pedig ügyvéd.
 </p>
 
-  <p>
+  <p class="bottomContent">
     Az esélyegyenlőség olyan követelmény, mely nélkül nem beszélhetünk jogállamról és demokráciáról. Egy jogállamban elvárás, hogy az alapvető jogok, az emberi méltóság mindenki számára megkülönböztetés nélkül alkotmányos és törvényi szinten is biztosított legyen. Az egyenlő jogi státusz viszont nem garantálja a tényleges társadalmi helyzet esélyegyenlőségét. A társadalmi esélyegyenlőség csak úgy biztosítható, ha maga a jog is figyelembe veszi a fennálló egyenlőtlenséget. Egyaránt önkényes az a jogi forma vagy intézmény, mely az egyenlő helyzetben lévőket egyenlőtlenül, vagy fordítva, az egyenlőtlen helyzetűeket egyenlően kezeli. Vagyis önkényes az az elvárás, ha az iskolarendszer vagy a munkaerőpiac standard elvárásokat állít különböző adottságokkal rendelkező egyének elé.
   </p>
 
