--- a/magunkrol.html
+++ b/magunkrol.html
@@ -5,55 +5,64 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Élménypedagógia.com || Főoldal</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister" rel="stylesheet">
    <script src="JavaScript/script.js"></script>
 
    <!-- Navigation menu mobile-->
-  <nav class="navSmall">
-      <label>MENÜ
-        <input type="checkbox">
-        <div>
-          <a class="navLink" href="index.html">Főoldal</a>
-          <a class="navLink" href="filozofiank.html">Filozófiánk</a>
-          <a class="navLink" href="magunkrol.html">Magunkról</a>
-          <a href="tanya.html">Tanya</a>
-          <a href="programok.html">Programok</a>
-          <a href="szolgaltatas.html">Szolgáltatások</a>
-          <a href="szak.html">Szakirodalom</a>
-          <a href="kapcsolat.html">Kapcsolat</a>
-        </div>
-      </label>
-    </nav>
-
-    <!-- Navigation menu normal-->
-   <nav class="navBig">
-     <div class="navDiv navLeft">
-         <div class="container">
-         <img id="main" class="navImage" src="images/handLightGreen.png">
-          <a class="navLink" id="mainPage" href="index.html">Főoldal</a>
-         <img class="navImage" src="images/handRed.png">
-         <a class="navLink" id="filozofiaLink" href="filozofiank.html">Filozófiánk</a>
-         <img id="blueUpTo" class="navImage"  src="images/handBlue.png">
-          <a class="navLink" id="magunkrolLink" href="magunkrol.html">Magunkról</a>
-         <img class="navImage bottom first" src="images/handYellow.png">
-           <a class="navLink" id="tanyaLink" href="tanya.html">Tanya</a>
-         <img class="navImage bottom" src="images/handPurple.png">
-           <a class="navLink" id="programLink" href="programok.html">Programok</a>
-         <img class="navImage bottom" src="images/handOrange.png">
-           <a class="navLink" id="szolgLink" href="szolgaltatas.html">Szolgáltatások</a>
-         <div class="navDiv navRight">
-            <div class="container">
-              <img id="main" class="navImage navImgLeft" src="images/handLightGreen.png">
-                 <a class="navLink" id="szakLink" href="szak.html">Szakirodalom</a>
-              <img id="blueUpTo" class="navImage navImgLeft" src="images/handBlue.png">
-                 <a class="navLink" id="kapcsLink" href="kapcsolat.html">Kapcsolat</a>
-            </div>
+   <nav class="navSmall">
+       <label>MENÜ
+         <input type="checkbox">
+         <div>
+           <a class="navLink" href="index.html">Főoldal</a>
+           <a class="navLink" href="filozofiank.html">Filozófiánk</a>
+           <a class="navLink" href="magunkrol.html">Magunkról</a>
+           <a href="tanya.html">Tanya</a>
+           <a href="programok.html">Programok</a>
+           <a href="szolgaltatas.html">Szolgáltatások</a>
+           <a href="szak.html">Szakirodalom</a>
+           <a href="kapcsolat.html">Kapcsolat</a>
          </div>
-     </div>
-   </nav>
+       </label>
+     </nav>
+
+     <!-- Navigation menu normal-->
+    <nav class="navBig">
+      <div class="navDiv navLeft">
+          <div class="container">
+            <div id="main" class="navImage">
+              <a class="navLink" href="index.html">Főoldal</a>
+            </div>
+            <div id="filozofiaLink" class="navImage">
+             <a class="navLink" href="filozofiank.html">Filozófiánk</a>
+            </div>
+            <div id="magunkrolLink" class="navImage">
+              <a class="navLink" href="magunkrol.html">Magunkról</a>
+            </div>
+            <div id="tanyaLink" class="navImage bottom first">
+             <a class="navLink" href="tanya.html">Tanya</a>
+            </div>
+            <div id="programLink" class="navImage bottom">
+              <a class="navLink" href="programok.html">Programok</a>
+            </div>
+            <div id="szolgLink" class="navImage bottom">
+             <a class="navLink" href="szolgaltatas.html">Szolgáltatások</a>
+           </div>
+           <div class="navDiv navRight">
+               <div class="container">
+                 <div id="szakLink" class="navImage navImgLeft">
+                   <a class="navLink" href="programok.html">Kapcsolat</a>
+                 </div>
+                 <div id="kapcsLink" class="navImage navImgLeft">
+                  <a class="navLink" href="szolgaltatas.html">Szakirodalom</a>
+                </div>
+               </div>
+           </div>
+       </div>
+      </div>
+    </nav>
 
 </head>
   <body onresize="resizeNav()" id="reBody">
@@ -87,6 +96,18 @@ A külföldön szerzett tapasztalataimat szeretném Magyarországon minél szél
     <div id="vb" class="portfolio">
       <h1>Varga Bálint</h1>
       <h3>Lovastúravezető</h3>
+    </div>
+
+    <hr>
+
+    <div id="vb" class="portfolio">
+      <h1>Ifjúsági Tanácsadó Testület</h1>
+      <p class="intro">Legnagyobb kincsünk, erőforrásunk és tudásbázisunk saját gyermekeink. Ők szenvedik el jól-rosszul sikerülő nevelési kísérleteinket, igazítják ki hibáinkat és nevelnek minket – valószínűleg még hatékonyabban, mint mi neveljük őket</p>
+      <p id="show" class="intro">
+        Nagyobb, immár felnőtt gyermekeink nap mint nap szemünk elé vetítik az idő visszafordíthatatlan múlását és tudatossá teszik bennünk az együtt töltött idő fontosságát, melyből oly kevés van. Valós tartalommal töltik meg a „retroaktív szocializáció” elvont szakmai fogalmát: A világ számtalan területén, például a digitális világban oly otthonosan mozognak, minket a kétségbevonhatatlan fölényből fakadó türelemmel oktatgatva, mint mikor még mi óvtuk-védtük első csetlő-botló lépéseiket. Így fordulnak meg az erőviszonyok, és ennek belátására felnövő gyermekeink nélkül valószínűleg nem lennénk képesek. Két lábon járó lelkiismeretként könyörtelenül szembesítenek minket hibáinkkal, és olykor, nagy néha, még egy-két sikert is elismernek. Megnevettetnek és megríkatnak, közlik velünk, hogy mikor vagyunk hülyék, és miért „ciki” velünk elmenni társaságba.
+        Kisebb gyermekeink a csodalátásra tanítanak minket: Arra, hogy minden kinyíló rügy, hangya, cserebogár a teremtés csodája. Amire felnőttként csak rálépnénk, azt felveszik, megcsodálják, gyönyörködnek benne – így tanítva minket is „látni” és észrevenni. Nem térnek oly könnyen napirendre sem öröm, sem bánat felett, mint mi felnőttek, nekik a jelen pillanat maga a végtelenség. Bár biztos vagyok benne, hogy sajnos nem tudjuk teljesen az ő szemükkel látni a világot, de törekszünk minél többet tanulni tőlük.
+        Patchwork család lévén összesen kilenc gyermekünk van, és jelenleg egy nevelt kisfiú. Születési sorrendben: Kíra (1995), Bendegúz (1999), Áfonya (2001), Saphíra (2003), Kadosa (2003), Leander (2005), Imola (2010), Ádám (2010), Csellő (2014) és Bulcsú (2014).
+      </p>
     </div>
   </div>
 </div>
