--- a/montessori.html
+++ b/montessori.html
@@ -55,10 +55,10 @@
           <div class="navDiv navRight">
               <div class="container">
                 <div id="szakLink" class="navImage navImgLeft">
-                  <a class="navLink" href="programok.html">Kapcsolat</a>
+                  <a class="navLink" href="kapcsolat.html">Kapcsolat</a>
                 </div>
                 <div id="kapcsLink" class="navImage navImgLeft">
-                 <a class="navLink" href="szolgaltatas.html">Szakirodalom</a>
+                 <a class="navLink" href="szak.html">Szakirodalom</a>
                </div>
               </div>
           </div>
