--- a/filozofiank.html
+++ b/filozofiank.html
@@ -77,30 +77,30 @@
 
  </div>
    <!-- Sajátos nevelési igényű -->
-    <section class="sectionFil wrapper">
+    <div class="sectionFil filDiv wrapper">
     <h1>Sajátos nevelésű gyerekek?</h1>
     <p> Az a tanuló sajátos nevelési igényű, aki sérült, fogyatékos vagy részképesség zavaros, ezért gyógypedagógiai fejlesztésre szorul, mely fejlesztéshez törvény szerint joga is van.
 Ezzel a megközelítéssel több probléma is adódik. </p>
 <button onclick="window.location.href='sajatos.html'"><b>Több</b></button>
-    </section>
+</div>
 
-    <section class="sectionFil wrapper">
+    <div class="sectionFil filDiv wrapper">
     <h1>Esélyegyenlőség</h1>
     <p> A mai magyar oktatási rendszer egyik fő funkciója a szelekció: egyik balra, másik jobbra… Vagyis már az iskolakezdés sikere attól függ, hogy a gyerek a saját egyénisége, intelligenciája és családi, szociális háttere alapján milyen „kasztba” tartozik, többség vagy kisebbség, nyertes vagy vesztes. </p>
 <button onclick="window.location.href='esely.html'"><b>Több</b></button>
-    </section>
+    </div>
 
-    <section class="sectionFil wrapper">
+    <div class="sectionFil filDiv wrapper">
     <h1>Tapasztalat alapú oktatás</h1>
     <p> A tapasztalat alapú oktatás az „add a kezébe, próbálja ki, hallgassa meg, szagolja meg, tapasztalja meg maga” módszerét állítja előtérbe, melyben a saját kísérletek esetleges kudarca is fontos tapasztalat. </p>
 <button onclick="window.location.href='tapasztalat.html'"><b>Több</b></button>
-    </section>
+    </div>
 
-    <section class="sectionFil wrapper">
+    <div class="sectionFil filDiv wrapper">
     <h1>Montessori pedagógia</h1>
     <p class="sectionFil">„Segíts nekem, hogy magam legyek képes rá!” </p>
 <button  onclick="window.location.href='montessori.html'"><b>Több</b></button>
-    </section>
+    </div>
 
  </body>
 </html>
