--- a/tanya.html
+++ b/tanya.html
@@ -277,7 +277,7 @@
     </section>
 
     <section class="sectionFil wrapper">
-      <h1 style="font-family: 'Love Ya Like A Sister', cursive; font-size: 50px">Állataimogató</h1>
+      <h1 style="font-family: 'Love Ya Like A Sister', cursive; font-size: 50px">Állatsimogató</h1>
       <p>
           Izlandi terápiás lovaink mellett számos kisállat várja, hogy kisebb-nagyobb vendégeinkkel köthessen barátságot.
       </p>
