--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Élményfarm - Izlandi lovakkal</title>
   <meta name="description" content="Élményfarm Budapest közelében izlandi lovakkal">
-  <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+  <meta name="keywords" content="élmény,pedagógia,farm,állatok,gyerek programok,izlandi lovak,állatsimogató,montessori">
 
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
